--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,16 @@
     <string name="last_notifications">Last Notifications</string>
     <string name="balance">Balance</string>
     <string name="dollar">$</string>
+    <string name="payment_details">Payment details</string>
+    <string name="status">Status</string>
+    <string name="status_pending">Pending</string>
+    <string name="status_proccessing">Proccessing</string>
+    <string name="status_done">Done</string>
+    <string name="transaction_id">Transaction id</string>
+    <string name="you_requested">You requested</string>
+    <string name="date">Date</string>
+    <string name="show_recipe">Show recipe</string>
+    <string name="my_transactions">My Transactions</string>
+    <string name="category">Category</string>
+    <string name="choose_card_type">Choose card type</string>
 </resources>
