--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="sp">S.p</string>
     <string name="btn_sell">Sell For</string>
     <string name="my_orders">My Orders</string>
+    <string name="quantity">4</string>
 </resources>
